fix card spacing between image and title

--- a/site/src/components/card/Card.module.css
+++ b/site/src/components/card/Card.module.css
@@ -25,7 +25,7 @@
   color: var(--card-color);
   display: flex;
   flex-direction: column;
-  gap: calc(var(--salt-size-unit) * 3);
+  gap: calc(var(--salt-size-unit) * 2);
   flex: 1;
 }
 
